--- a/Web-Micro-Services/p20.md
+++ b/Web-Micro-Services/p20.md
@@ -1,1 +1,236 @@
+# Chapter 20. Docker Basics
+
+## Introduction
+
+Docker is one of the easiest ways to package and run your application anywhere.
+Think of it like **putting your app inside a box**, so you can ship that box to any computer, and it will run exactly the same way.
+
+No more:
+
+* “It works on my machine but not on yours.”
+* “Which version of Python?”
+* “Which libraries?”
+
+With Docker, everything your app needs is inside the box.
+
+---
+
+## Concepts
+
+### 📦 1. Docker Image
+
+A **recipe** or **blueprint** for your application.
+It tells Docker what to install and how to run your app.
+
+Example: “A box that contains Python 3.11 + your FastAPI code + required libraries.”
+
+### 🚚 2. Docker Container
+
+A **running copy** of the image.
+Like opening the box and using the application inside it.
+
+### 📁 3. Docker Volumes
+
+A way to store your data **outside** the container so it doesn’t disappear when the container stops.
+
+Example: your database files, logs, uploads, etc.
+
+### 🚢 Simple Real-life Explanation
+
+Imagine you run a restaurant and want to open branches in 10 cities.
+
+* Without Docker → you pack the ingredients separately, train cooks, explain recipes, fix cooking differences… lots of confusion.
+* With Docker → you send **a ready-made kitchen box** with:
+
+  * Stove
+  * Ingredients
+  * Recipe book
+  * Tools
+
+The new branch just opens the box and starts cooking.
+
+---
+
+## Step-by-step Explanation
+
+### ⭐ Step 1: Create Your Application Folder
+
+```
+myapp/
+ ├── main.py
+ └── requirements.txt
+```
+
+Example `main.py`:
+
+```python
+from fastapi import FastAPI
+
+app = FastAPI()
+
+@app.get("/")
+def hello():
+    return {"message": "Hello from Docker!"}
+```
+
+---
+
+### ⭐ Step 2: Create Dockerfile
+
+A Dockerfile is like instructions for building your box.
+
+`Dockerfile`:
+
+```dockerfile
+FROM python:3.11
+
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+
+COPY . .
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+```
+
+---
+
+### ⭐ Step 3: Build the Docker Image
+
+Go to project folder and run:
+
+```
+docker build -t myapp:v1 .
+```
+
+* `myapp:v1` → name of your box
+* `.` → current directory
+
+---
+
+### ⭐ Step 4: Run Container
+
+Now run your app as a container:
+
+```
+docker run -p 8000:8000 myapp:v1
+```
+
+Meaning:
+
+* Expose container’s port to your computer.
+* Your FastAPI app is live at:
+
+  ```
+  http://localhost:8000
+  ```
+
+---
+
+### ⭐ Step 5: Attach a Volume
+
+Sometimes you want to keep your data safe, even when containers are deleted.
+
+Example: Mount a folder for saving logs.
+
+```
+docker run -p 8000:8000 \
+  -v /home/user/mydata:/app/data \
+  myapp:v1
+```
+
+It works like attaching an **external hard drive** to the container.
+
+Inside the container:
+
+```
+/app/data
+```
+
+On your host machine:
+
+```
+/home/user/mydata
+```
+
+---
+
+## Code Examples
+
+### Example: requirements.txt
+
+```
+fastapi
+uvicorn
+```
+
+### Example: Run with environment variables
+
+```
+docker run -p 8000:8000 \
+  -e DEBUG=true \
+  myapp:v1
+```
+
+### Example: Build & Run Together
+
+```
+docker build -t myapp:v2 . && docker run -p 8001:8000 myapp:v2
+```
+
+---
+
+## How Codex Helps
+
+Codex can simplify Docker tasks tremendously:
+
+### ✔ Generate a Dockerfile
+
+“Codex, generate a Dockerfile for my FastAPI project.”
+
+### ✔ Fix Docker build errors
+
+“Codex, my Docker build is failing. Here is the error log. Fix it.”
+
+### ✔ Create docker-compose.yml
+
+“Codex, create docker-compose file with API + MySQL + Redis.”
+
+### ✔ Suggest best folder structure
+
+“Codex, organize my backend project for Docker deployment.”
+
+### ✔ Optimize image size
+
+“Codex, reduce my Docker image size using multi-stage builds.”
+
+Codex is especially helpful for beginners who find Docker syntax confusing.
+
+---
+
+## Small Exercise
+
+Create a small FastAPI app and do the following:
+
+1. Write a `Dockerfile`
+2. Build the image
+
+   ```
+   docker build -t hello:v1 .
+   ```
+3. Run the container
+
+   ```
+   docker run -p 9000:8000 hello:v1
+   ```
+4. Add a volume for storing uploaded files
+
+   ```
+   docker run -p 9000:8000 -v ./uploads:/app/uploads hello:v1
+   ```
+
+See the logs and files saved in your folder.
+
+---
 
