--- a/Web-Micro-Services/p21.md
+++ b/Web-Micro-Services/p21.md
@@ -1,1 +1,334 @@
+# Chapter 21. Deploying Microservices
 
+## Introduction
+
+Once your microservices are ready, you need to **run them on a real server** so other people can use them.
+This is called **deployment**.
+
+Deploying microservices may sound difficult, but you can think of it like:
+
+> **Setting up different food stalls inside a food court.**
+> Each stall (microservice) has its own kitchen and worker.
+> Nginx works as the “main entrance” or “food court manager,” guiding customers to the right stall.
+
+In this chapter, we learn:
+
+1. How to deploy microservices on a **VPS**
+2. How to route them through **Nginx**
+3. How to keep them running using **PM2** or **Uvicorn workers**
+
+We will keep everything simple and real-life friendly.
+
+---
+
+## Concepts
+
+### ☁️ 1. VPS (Virtual Private Server)
+
+A VPS is just a **computer on the internet** that you rent.
+Example providers:
+
+* DigitalOcean
+* Linode
+* AWS Lightsail
+* Hostinger
+* Vultr
+
+You can install:
+
+* Python
+* FastAPI
+* MySQL
+* Docker
+* Nginx
+
+Your microservices will run here.
+
+---
+
+### 🔁 2. Nginx Reverse Proxy
+
+Nginx sits in front and guides traffic to the right service.
+
+Example:
+
+```
+https://myapp.com/users  → User Service
+https://myapp.com/orders → Order Service
+```
+
+Think of it like a receptionist who directs visitors to the correct counter.
+
+---
+
+### 🟢 3. PM2 / Uvicorn Workers
+
+A microservice must **always stay running**, even if something crashes.
+
+* **PM2** → A process manager that keeps your app alive
+* **Uvicorn workers** → Multiple workers to handle many requests
+
+Example:
+
+```
+uvicorn main:app --workers 4 --port 8001
+```
+
+Like having 4 cooks working in the same food stall.
+
+---
+
+## Step-by-step Explanation
+
+### ⭐ Step 1: Connect to VPS
+
+From your terminal:
+
+```
+ssh root@your-server-ip
+```
+
+Now you are inside your online computer.
+
+---
+
+### ⭐ Step 2: Install Dependencies
+
+Install Python, pip, Git:
+
+```
+apt update
+apt install python3 python3-pip git -y
+```
+
+(Optional) Install virtualenv:
+
+```
+pip install virtualenv
+```
+
+---
+
+### ⭐ Step 3: Clone Your Microservice
+
+Assume User Service:
+
+```
+git clone https://github.com/you/user-service.git
+cd user-service
+pip install -r requirements.txt
+```
+
+Run it:
+
+```
+uvicorn main:app --host 0.0.0.0 --port 8001
+```
+
+Now check:
+
+```
+http://your-server-ip:8001
+```
+
+---
+
+### ⭐ Step 4: Keep Services Alive Using PM2
+
+PM2 makes sure your app restarts if it fails.
+
+Install PM2:
+
+```
+npm install -g pm2
+```
+
+Start service:
+
+```
+pm2 start "uvicorn main:app --host 0.0.0.0 --port 8001" --name user-service
+```
+
+Check status:
+
+```
+pm2 status
+```
+
+Restart:
+
+```
+pm2 restart user-service
+```
+
+Auto-start on reboot:
+
+```
+pm2 startup
+pm2 save
+```
+
+---
+
+### ⭐ Step 5: Install and Configure Nginx
+
+Install:
+
+```
+apt install nginx -y
+```
+
+Edit config:
+
+```
+nano /etc/nginx/sites-available/myapp.conf
+```
+
+Add:
+
+```
+server {
+    server_name myapp.com;
+
+    location /users/ {
+        proxy_pass http://127.0.0.1:8001/;
+    }
+
+    location /orders/ {
+        proxy_pass http://127.0.0.1:8002/;
+    }
+}
+```
+
+Enable configuration:
+
+```
+ln -s /etc/nginx/sites-available/myapp.conf /etc/nginx/sites-enabled/
+nginx -t
+systemctl restart nginx
+```
+
+Now your services are available at:
+
+```
+https://myapp.com/users/
+https://myapp.com/orders/
+```
+
+The frontend only talks to Nginx → Nginx talks to microservices.
+
+---
+
+### ⭐ Step 6: Run Uvicorn with Multiple Workers
+
+To handle high traffic:
+
+```
+uvicorn main:app --host 0.0.0.0 --port 8001 --workers 4
+```
+
+Or with PM2:
+
+```
+pm2 start "uvicorn main:app --workers 4 --port 8001" --name user-service
+```
+
+More workers = more requests handled at the same time.
+
+---
+
+## Code Examples
+
+### 🧩 Example Nginx Reverse Proxy Setup
+
+```
+server {
+    server_name api.myshop.com;
+
+    location /auth/ {
+        proxy_pass http://127.0.0.1:8001/;
+    }
+
+    location /products/ {
+        proxy_pass http://127.0.0.1:8002/;
+    }
+
+    location /payments/ {
+        proxy_pass http://127.0.0.1:8003/;
+    }
+}
+```
+
+### Example PM2 Start Command
+
+```
+pm2 start "uvicorn main:app --port 8002 --workers 2" --name product-service
+```
+
+### Example Folder Structure on VPS
+
+```
+/var/www/
+   ├── user-service/
+   ├── product-service/
+   ├── order-service/
+   └── logs/
+```
+
+---
+
+## How Codex Helps
+
+Codex can simplify deployment steps:
+
+### ✔ Generate Uvicorn commands
+
+“Codex, create Uvicorn start commands for 3 microservices.”
+
+### ✔ Create Nginx config
+
+“Codex, generate an Nginx reverse proxy configuration for a FastAPI gateway + 4 microservices.”
+
+### ✔ Detect errors
+
+“Codex, explain this Nginx error log and fix the config.”
+
+### ✔ Create deploy scripts
+
+“Codex, generate a Bash script that installs Python, clones repo, installs dependencies, and runs PM2.”
+
+### ✔ Docker + Nginx
+
+“Codex, generate docker-compose for Nginx + FastAPI microservices.”
+
+This makes deployment extremely simple even for beginners.
+
+---
+
+## Small Exercise
+
+**Task:** Deploy two microservices on your VPS:
+
+1. User service on port 8001
+2. Inventory service on port 8002
+
+Steps:
+
+1. Clone both services
+2. Run them with PM2
+3. Create an Nginx config:
+
+   ```
+   /users/ → port 8001
+   /inventory/ → port 8002
+   ```
+4. Restart Nginx
+5. Test both routes
+
+**Bonus:**
+Add HTTPS using Let’s Encrypt.
+
+**Super Bonus:**
+Add 2 Uvicorn workers to each microservice.
+
+---
