--- a/Web-Micro-Services/p22.md
+++ b/Web-Micro-Services/p22.md
@@ -1,1 +1,239 @@
+# Chapter 22. Using Codex to Refactor Code
 
+## Introduction
+
+Refactoring simply means **cleaning and improving your existing code without changing what it does**.
+Think of it like cleaning your work desk: the work you do doesn’t change, but everything becomes easier to find and manage.
+
+In this chapter, we learn how to use **OpenAI Codex** to make our code cleaner, simpler, and more professional.
+
+We’ll also see how Codex can help reshape architecture and even improve your database design.
+
+---
+
+## Concepts
+
+* **Refactoring** = improving the structure of code.
+* **Clean code** = easy to read, easy to modify.
+* **Comments** = simple notes explaining why something is done.
+* **Architecture changes** = reorganizing folders, files, or service layers.
+* **Database schema improvement** = making tables more meaningful and easier to query.
+
+---
+
+## Step-by-step Explanation
+
+### 1. Making Code Cleaner
+
+You may have code that works but looks messy.
+Example real-life analogy:
+Imagine your kitchen. You can cook even if everything is scattered.
+But if you keep spices together, utensils together, and ingredients neatly stored, cooking becomes faster.
+Refactoring does the same for your project.
+
+What Codex can do:
+
+* Format your code
+* Rename confusing variables
+* Break long functions into small ones
+* Remove repeated code
+
+---
+
+### 2. Adding Comments
+
+Comments act like small labels on containers in your kitchen.
+
+Good comments explain:
+
+* Why a function exists
+* Why a special condition is needed
+* The meaning of tricky variables
+
+Codex can automatically generate helpful comments based on what your function does.
+
+---
+
+### 3. Changing Architecture
+
+Sometimes your code works, but the overall structure feels messy.
+
+Example analogy:
+Imagine a shop where items are scattered randomly.
+Refactoring reorganizes the layout so that customers (or in our case, developers) can find things easily.
+
+Codex can help you:
+
+* Move business logic to separate files
+* Create folders for routes, services, models
+* Introduce a layered architecture:
+
+```
+/app
+   /routers
+   /services
+   /schemas
+   /models
+   /database
+```
+
+---
+
+### 4. Improving Database Schema
+
+Database schema refactoring means reorganizing tables to make data easier to manage.
+
+Example analogy:
+If your cupboard has only one big shelf, clothes get mixed.
+Adding smaller shelves makes everything cleaner.
+
+Codex can suggest:
+
+* Better table names
+* Adding indexes for speed
+* Normalizing repeated fields
+* Splitting a large table into smaller related tables
+
+---
+
+## Code Examples
+
+### 1. Refactoring a messy function
+
+**Before:**
+
+```python
+def calc(a,b,c):
+    if c == 1:
+        return a+b
+    else:
+        return a-b
+```
+
+**After Codex refactoring:**
+
+```python
+def calculate_amount(value1: int, value2: int, mode: int) -> int:
+    """
+    Calculates the total amount based on the selected mode.
+    mode = 1 → addition
+    mode = 2 → subtraction
+    """
+    if mode == 1:
+        return value1 + value2
+    return value1 - value2
+```
+
+---
+
+### 2. Refactoring architecture
+
+Codex can turn this:
+
+```
+project/
+   main.py
+   everything_in_one_file.py
+```
+
+into this:
+
+```
+project/
+   main.py
+   /routers
+       items.py
+   /services
+       items_service.py
+   /models
+       item_model.py
+```
+
+---
+
+### 3. Improving database schema
+
+**Before (simple and limited):**
+
+```sql
+CREATE TABLE orders (
+    id INT PRIMARY KEY,
+    name VARCHAR(100),
+    price INT
+);
+```
+
+**After (more realistic):**
+
+```sql
+CREATE TABLE orders (
+    id INT PRIMARY KEY AUTO_INCREMENT,
+    customer_id INT,
+    order_date DATETIME,
+    total_amount DECIMAL(10,2),
+    status VARCHAR(20),
+    FOREIGN KEY (customer_id) REFERENCES customers(id)
+);
+```
+
+---
+
+## How Codex Helps
+
+Codex can do the following:
+
+### ✔ Make your code cleaner
+
+Ask:
+
+> "Refactor this function to be more readable and efficient."
+
+### ✔ Add comments
+
+Ask:
+
+> "Add clear comments explaining each step of this code."
+
+### ✔ Suggest architecture improvements
+
+Ask:
+
+> "Restructure my project into routers/services/models folders."
+
+### ✔ Improve database schema
+
+Ask:
+
+> "Suggest a better schema for my orders and customers tables."
+
+### ✔ Debug and fix errors introduced during refactoring
+
+Ask:
+
+> "Codex, check this refactored code for logical errors."
+
+### ✔ Generate migration scripts
+
+Ask:
+
+> "Create an Alembic migration for the improved schema."
+
+Codex acts like a senior engineer sitting beside you, cleaning your code and helping you follow best practices.
+
+---
+
+## Small Exercise
+
+1. Take any small Python function you wrote earlier.
+2. Ask Codex to refactor it using:
+
+   * better variable names
+   * comments
+   * smaller helper functions
+3. Then ask Codex:
+
+   > “Suggest how I can reorganize my project folders for better architecture.”
+
+You will clearly see how Codex guides you step-by-step.
+
+---
