--- a/Web-Micro-Services/p23.md
+++ b/Web-Micro-Services/p23.md
@@ -1,1 +1,245 @@
+# Chapter 23. Using Codex to Add Features to Existing Projects
 
+## Introduction
+
+Once you have an existing backend project, the next big step is **adding new features** without breaking what already works.
+Codex makes this process much easier because it can **read your project**, understand the structure, and help you add new routes, new services, or entire modules.
+
+Think of it like inviting an experienced mechanic to look at your car, understand the design, and install new parts safely without disturbing anything else.
+
+---
+
+## Concepts
+
+* **Project inspection** → Let Codex read your project files and understand how things are organized.
+* **Adding new endpoints** → Creating new API routes (like adding new menu items to a restaurant).
+* **Adding new services** → Adding business logic (like adding a new kitchen section).
+* **Improving code quality** → Cleaning and organizing existing code.
+* **Folder-level interaction** → Codex works best when it sees the whole project, not a single file.
+
+---
+
+## Step-by-step Explanation
+
+### 1. Uploading Your Project Folder
+
+Before Codex can help, it needs to “see” your project.
+
+In VS Code Codex mode:
+
+* Open your project folder
+* Codex analyzes files and folder structure
+* You can ask Codex:
+
+  > “Inspect the folder and tell me how this project is structured.”
+
+Real-life example:
+Imagine giving a blueprint of a house to an architect before asking for renovations.
+
+---
+
+### 2. Letting Codex Inspect the Project
+
+Codex can read your file tree and explain:
+
+* Where your routers are located
+* How services are written
+* How models and schemas are organised
+* How your database logic works
+* Which files might need improvement
+
+Ask Codex:
+
+> “Codex, please read my project and describe the structure in simple bullet points.”
+
+This helps you understand your own project better.
+
+---
+
+### 3. Adding New Endpoints
+
+Suppose you have a simple product service and you want to add a "search products" API.
+
+Codex can automatically:
+
+* Read existing routes
+* Follow your code style
+* Generate a matching endpoint
+* Add Pydantic schemas if needed
+* Update services and database logic
+
+Analogy:
+Like adding a new food item to the restaurant menu based on existing menu format.
+
+---
+
+### 4. Adding New Services
+
+A service contains the actual “brain” or logic behind the endpoint.
+
+Codex can create:
+
+* New service files
+* Helper functions
+* Validation logic
+* Database queries
+
+For example:
+
+> “Add a new service called `discount_service.py` that calculates discounts for orders.”
+
+Codex reads your architecture and creates the file exactly where it should be.
+
+---
+
+### 5. Improving Code Quality
+
+Whenever you add new features, the project becomes a little more complex. Codex can help keep things clean by:
+
+* Removing duplicated code
+* Extracting common functions
+* Adding comments
+* Improving variable names
+* Suggesting folder restructuring
+* Updating error handling
+* Making async functions consistent
+
+Think of it like regular house cleaning after adding new rooms.
+
+---
+
+## Code Examples
+
+### 1. Adding a new endpoint: `/products/search`
+
+**Codex-generated router example:**
+
+```python
+@router.get("/products/search")
+async def search_products(query: str, db: Session = Depends(get_db)):
+    """
+    Search products by name or description.
+    """
+    return product_service.search_products(db, query)
+```
+
+### 2. Adding new service logic
+
+```python
+def search_products(db: Session, query: str):
+    return db.query(Product).filter(
+        Product.name.contains(query) |
+        Product.description.contains(query)
+    ).all()
+```
+
+### 3. Improving code quality
+
+Before:
+
+```python
+def calc(a,b):
+    return a+b
+```
+
+After Codex refactor:
+
+```python
+def calculate_total(price: float, tax: float) -> float:
+    """Returns the final price after adding tax."""
+    return price + tax
+```
+
+### 4. Folder restructure example
+
+Codex can reorganize your project like this:
+
+Before:
+
+```
+project/
+    main.py
+    routes.py
+    models.py
+    database.py
+```
+
+After:
+
+```
+project/
+    main.py
+    /routers
+        products.py
+        orders.py
+    /services
+        product_service.py
+        order_service.py
+    /models
+        product.py
+        order.py
+```
+
+---
+
+## How Codex Helps
+
+### ✔ Understanding the existing project
+
+Ask:
+
+> “Read my project and explain the structure.”
+
+### ✔ Adding new endpoints
+
+Ask:
+
+> “Add a GET /orders/history endpoint using the same style as other order APIs.”
+
+### ✔ Adding new services
+
+Ask:
+
+> “Generate a new service for handling coupons. Create router, service, schema, and model.”
+
+### ✔ Improving code quality
+
+Ask:
+
+> “Refactor this router to be cleaner and consistent.”
+
+### ✔ Automatic folder creation
+
+Codex can create:
+
+* new routers
+* new models
+* new migrations
+* new helper functions
+
+### ✔ Debugging after adding new features
+
+Ask:
+
+> “Codex, check the new feature for errors and fix them.”
+
+Codex becomes your assistant who understands your entire project and safely adds features exactly where needed.
+
+---
+
+## Small Exercise
+
+1. Take an existing small API project (User/Item example is fine).
+2. Upload the folder to Codex-enabled VS Code.
+3. Ask Codex:
+
+   * “Inspect this project and summarise its architecture.”
+   * “Add a new endpoint called `/users/profile` that returns user details.”
+   * “Create a new service file to handle profile logic.”
+4. Finally ask:
+
+   * “Refactor all updated files for clean code and add helpful comments.”
+
+This will give you a complete hands-on experience.
+
+---
